# nx9-auth

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES.md  build.rs  compose.casaos.yml  config.example.toml  deploy.sh  docker-compose.yml  fix_applications.py  fix_clippy.py  fix_clippy2.py  fix_final_all.py  fix_final_all2.py  fix_final_tests.py  fix_final_tests2.py  fix_mocks.py  fix_mocks2.py  fix_pwd_reset_test.py  fix_remaining.py  fix_sec_enum.py  fix_sec_tests.py  fix_test_errors.py  fix_test_errors2.py  fix_test_errors3.py  fix_test_errors4.py  fix_test_errors5.py  nx9-auth.service  patch_boot.js  refactor_tests.py
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BACKUPS.md  BENCHMARKS.md  DEPLOYMENT.md  DOCKER.md  INTEGRATION_BZOD.md  RECOVERY_REPORT.md  REFRACTOR_REPORT.md  RUNTIME_LIFECYCLE.md  SECURITY.md  TECHNICAL_REPORT.md  dashboard.html  runtime-lifecycle.md
docs/adr/: 0001-modular-runtime-architecture.md
scripts/: build-ui.sh  release.sh
src/: lib.rs  main.rs  state.rs
src/api/: applications.rs  audit.rs  auth.rs  dashboard.rs  groups.rs  health.rs  mod.rs  permissions.rs  profile.rs  roles.rs  router.rs  service_accounts.rs  sessions.rs  tenants.rs  tokens.rs  ui.rs  users.rs  version.rs
src/audit/: audit.rs  mod.rs
src/cli/: mod.rs
src/config/: mod.rs
tests/: application_credentials_test.rs  application_members_test.rs  audit_export_test.rs  auth_security_test.rs  cli_test.rs  integration_test.rs  migration_compatibility.rs  password_reset_api.rs  postgres_migration_test.rs  runtime_lifecycle_test.rs  security_test.rs  slug_management_test.rs  tenant_management_ui_test.rs
ui/: Cargo.toml  Dioxus.toml
ui/assets/: boot.js  style.css
ui/src/: app.rs  main.rs
ui/src/components/: mod.rs
ui/src/components/feedback/: mod.rs
ui/src/components/forms/: mod.rs
ui/src/components/layout/: mod.rs
ui/src/components/navigation/: mod.rs  registry.rs
ui/src/components/tables/: datatable.rs  mod.rs
ui/src/components/widgets/: mod.rs
ui/src/models/: mod.rs
ui/src/pages/: mod.rs
ui/src/pages/about/: mod.rs
ui/src/pages/applications/: mod.rs
ui/src/pages/audit/: mod.rs
ui/src/pages/auth/: mod.rs
ui/src/pages/dashboard/: mod.rs
ui/src/pages/groups/: mod.rs
ui/src/pages/not_found/: mod.rs
ui/src/pages/permissions/: mod.rs
ui/src/pages/profile/: mod.rs
ui/src/pages/roles/: mod.rs
ui/src/pages/service_accounts/: mod.rs
ui/src/pages/sessions/: mod.rs
ui/src/pages/settings/: mod.rs
ui/src/pages/tenants/: mod.rs
ui/src/pages/tokens/: mod.rs
ui/src/pages/users/: mod.rs
ui/src/routes/: mod.rs
ui/src/services/: api.rs  mod.rs  session.rs
ui/src/state/: mod.rs
ui/src/theme/: mod.rs
ui/src/utils/: mod.rs
(+115 files in other folders)
